--- a/kyj_prj/build.gradle
+++ b/kyj_prj/build.gradle
@@ -1,11 +1,11 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.0'
+	id 'org.springframework.boot' version '3.1.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.msa'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
 	toolchain {
@@ -32,6 +32,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security' 
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6' 
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'
 }
 
 tasks.named('test') {
