백,프론트 연결, 일부 sql및 불필요한 파일제거거

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -32,12 +32,20 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security' 
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6' 
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
+
+	// 오라클11 설정
+	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11
+	implementation 'com.oracle.database.jdbc:ojdbc11:21.7.0.0'
+	
+	// 마리아 DB 설정
+	// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+	//implementation 'org.mariadb.jdbc:mariadb-java-client:2.6.2' 
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
