--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,14 +6,26 @@ spring.devtools.restart.enabled=true
 #캐시 끄기 (템플릿 관련)
 spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/kosa_db?useSSL=false
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.username=kosa
+#오라클 연결
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.username=scott
 spring.datasource.password=1004
 
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
-#spring.jpa.hibernate.database-platform: org.hibernate.dialect.MariaDB103Dialect
-spring.jpa.database-platform: org.hibernate.dialect.MariaDB103Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
+	
+#마리아 DB 연결
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/kosa_db?useSSL=false
+#spring.datasource.username=kosa
+#spring.datasource.password=1004
+
+#mybatis 설정
+#오라클 전용
+mybatis.mapper-locations=classpath:/mappers/oracle/**/*_SQL.xml
+
+#마리아 전용
+#mybatis.mapper-locations=classpath:/mappers/mariaDB/**/*_SQL.xml
+
